# Product-Marketing-Agency

./: .env.example  .gitignore  README.md  docs.md  example.py  pyproject.toml  requirements.txt
marketing_outputs/: base64_tracking.json
marketing_outputs/jobs/: 915aa3b6-a258-4d68-a7e4-eab6c8d145ee_feedback.json  edf2044c-dded-45cc-95ab-23a61d7fbed3_feedback.json
marketing_outputs/products/: 59d14370-c0cf-455d-b71f-4727b8a6fd22.json  8c0e7e7c-4e36-4a12-b936-9a7e2e600b6b.json  b7b64276-0664-4a32-96be-8e62a7811c50.json
product_marketing_agency/: __init__.py  main.py
